--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
   <body>
     <h1>Hello, GitHub Actions!</h1>
     <p>This is a test file for verifying branch operations workflow.</p>
-    <p>nekoneko</p>
-    <p>nekoneko</p>
-    <p>nekoneko</p>
-    <p>nekoneko</p>
-    <p>nekoneko</p>
-    <p>nekoneko</p>
-    <p>nekoneko</p>
-    <p>nekoneko</p>
+    <p>testtest</p>
   </body>
 </html>
