--- a/index.html
+++ b/index.html
@@ -9,12 +9,5 @@
     <h1>Hello, GitHub Actions!</h1>
     <p>This is a test file for verifying branch operations workflow.</p>
     <p>testtest</p>
-    <p>testtest</p>
-    <p>testtest2222</p>
-    <p>testtest3333</p>
-    <p>testtest2222</p>
-    <p>testtest3333</p>
-    <p>nekoneko</p>
-    <p>nekokonekoko</p>
-  </body>
+    <p>release</p>
 </html>
