--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <h1>Hello, GitHub Actions!</h1>
     <p>This is a test file for verifying branch operations workflow.</p>
     <p>testtest</p>
-    <p>testtest</p>
-    <p>testtest532</p>
-    <p>testtest532</p>
-    <p>testtest532</p>
+    <p>TESTTEST!!!</p>
   </body>
 </html>
