--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>This is a test file for verifying branch operations workflow.</p>
     <p>testtest</p>
     <p>TESTTEST!!!</p>
+    <p>hotfix</p>
   </body>
 </html>
